fix covers.css v-2

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -18,8 +18,6 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
-    font-family: "Pridi", sans-serif;
-    font-weight: 600;
     font-size: 34px;
     text-transform: uppercase;
     animation: marqueeLine 30s linear infinite;
@@ -54,7 +52,7 @@
 
 .marquee__inner {
     min-width: 200vw;
-    height: 40vh;
+    height: 200px;
     display: flex;
     flex-wrap: nowrap;
     transform: rotate(17deg);
@@ -111,6 +109,10 @@
         width: 544px;
         height: 314px;
     }
+
+    .marquee__inner {
+        height: 360px;
+    }
 }
 
 /* Desktop */
@@ -129,5 +131,9 @@
     .marquee__item {
         width: 544px;
         height: 314px;
+    }
+
+    .marquee__inner {
+        height: 360px;
     }
 }
